--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 group = 'ru.kropotov'
@@ -46,4 +47,11 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+shadowJar {
+    archiveClassifier.set('')
+}
+
+tasks.build {
+    dependsOn shadowJar
 }
